<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ca.dungeons.sensordump.MainActivity">

    <ImageButton
        android:id="@+id/ibSetup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:src="@mipmap/ic_gear"
        android:alpha=".75"
        android:foregroundGravity="top"
        android:contentDescription="@string/Settings" />


    <TextView
        android:id="@+id/tvProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/No_Sensor_Readings"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_below="@+id/ibSetup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="97dp" />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonStart"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/TickText"
        style="@style/AppTheme"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:clickable="false"
        android:ems="10"
        android:gravity="center_vertical|center"
        android:selectAllOnFocus="false"
        android:text="@string/Collection_Interval"
        android:layout_above="@+id/seekBar"
        android:layout_centerHorizontal="true" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:clickable="true"
        android:max="999"
        android:progress="250"
        android:scrollbarSize="12dp"
        android:thumb="@android:drawable/sym_def_app_icon"
        android:layout_marginBottom="24dp"
        android:layout_above="@+id/btnStart"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:id="@+id/ivLogo"
        android:background="@drawable/elastic_logo"
        android:alpha=".1"
        android:foregroundGravity="bottom"
        android:adjustViewBounds="false"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/seekBar"
        android:contentDescription="@string/app_name" />

</RelativeLayout>
